--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -7,6 +7,7 @@
   },
   "topBar": {
     "products": "منتجات Aerotools",
+    "tooling": "تصنيع الأدوات والتكامل",
     "recruitment": "التوظيف",
     "brochure": "كتيب PDF"
   },
@@ -31,6 +32,7 @@
     "egi": "EGI - الهندسة",
     "frem": "FREM - الصيانة",
     "mgp": "MGP - الصفائح المعدنية",
+    "tooling": "تصنيع الأدوات والتكامل",
     "aerotools": "Aerotools - منتجات GSE",
     "brochure": "كتيب PDF",
     "offres": "عروض العمل",
@@ -259,7 +261,8 @@
     "ce": "علامة CE",
     "iso9001": "ISO 9001:2015",
     "en9100": "EN 9100",
-    "en12312": "EN 12312-1"
+    "en12312": "EN 12312-1",
+    "interchangeability": "قابلية التبادل"
   },
   "footer": {
     "company": {
