--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -7,6 +7,7 @@
   },
   "topBar": {
     "products": "Productos Aerotools",
+    "tooling": "Fabricación de utillaje e Integración",
     "recruitment": "Empleo",
     "brochure": "Catálogo PDF"
   },
@@ -31,6 +32,7 @@
     "egi": "EGI - Ingeniería",
     "frem": "FREM - Mantenimiento",
     "mgp": "MGP - Calderería",
+    "tooling": "Fabricación de utillaje e Integración",
     "aerotools": "Aerotools - Productos GSE",
     "brochure": "Catálogo PDF",
     "offres": "Ofertas de empleo",
@@ -259,7 +261,8 @@
     "ce": "Marcado CE",
     "iso9001": "ISO 9001:2015",
     "en9100": "EN 9100",
-    "en12312": "EN 12312-1"
+    "en12312": "EN 12312-1",
+    "interchangeability": "Intercambiabilidad"
   },
   "footer": {
     "company": {
