refactor(features): refactoriser section Pourquoi Nous Choisir - Besoins industriels, Usinage 3-5 axes, Suivi numerique temps reel, Fabrication pieces/outillages/machines speciales - traductions FR/EN/ES/PT-BR/AR

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -83,24 +83,24 @@
     },
     "list": [
       {
-        "title": "الامتثال للمعايير",
-        "description": "جميع معداتنا تتوافق مع معايير EN 12312 وEN 1915 وتوجيه الآلات 2006/42/CE.",
+        "title": "الاحتياجات الصناعية",
+        "description": "نلبي جميع احتياجاتكم الصناعية وفقاً لمعايير EN 12312 وEN 1915 وتوجيه الآلات 2006/42/CE.",
         "benefits": ["قابلية تبادل المكونات", "تتبع كامل", "شهادات صناعية"]
       },
       {
-        "title": "التصنيع الدقيق",
-        "description": "تصنيع دقيق من 3 إلى 5 محاور وتركيب القطع الميكانيكية وفقاً لمواصفات العميل.",
-        "benefits": ["تصنيع من 3 إلى 5 محاور", "مراقبة الجودة", "خبرة تقنية"]
+        "title": "تصنيع دقيق من 3 إلى 5 محاور",
+        "description": "مركز تصنيع عالي الأداء لإنتاج القطع المعقدة والتركيب الميكانيكي وفقاً لمواصفاتكم.",
+        "benefits": ["خراطة وتفريز متعدد المحاور", "فحص الأبعاد", "خبرة تقنية متقدمة"]
       },
       {
         "title": "الالتزام بالمواعيد",
-        "description": "الالتزام بالمواعيد المتفق عليها بفضل تنظيمنا المحسّن وقدرتنا الإنتاجية.",
-        "benefits": ["متابعة رقمية للمشاريع", "تخطيط دقيق", "إدارة العمليات"]
+        "description": "يستفيد كل مشروع من متابعة رقمية في الوقت الفعلي لضمان الوفاء بالالتزامات والشفافية في كل مرحلة.",
+        "benefits": ["متابعة رقمية في الوقت الفعلي", "جدولة مرنة واستباقية", "إدارة العمليات"]
       },
       {
         "title": "فريق خبير",
-        "description": "متخصصون في تصنيع القطع الأساسية والأدوات والآلات الخاصة.",
-        "benefits": ["تصنيع القطع الأساسية", "الأدوات الصناعية", "الآلات الخاصة"]
+        "description": "يتقن متخصصونا تصنيع القطع الأساسية والأدوات والآلات الخاصة لتقديم حلول مخصصة.",
+        "benefits": ["تصنيع القطع الأساسية والأدوات والآلات الخاصة", "أدوات صناعية دقيقة", "هندسة مخصصة"]
       },
       {
         "title": "الابتكار المستمر",
