refactor(groupe): titre COUVRIR VOS BESOINS INDUSTRIELS, dates timeline agrandies, stats qualitatives Depuis 1989, reorganiser sections cas-clients, retirer pourcentages temoignages - traductions FR/EN/ES/PT-BR/AR

--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -1,6 +1,6 @@
 {
-  "title": "اكتشف شركات مجموعة LLEDO",
-  "subtitle": "تجمع من 5 كيانات متكاملة لتغطية جميع احتياجاتكم في الهندسة الصناعية",
+  "title": "تلبية احتياجاتكم الصناعية",
+  "subtitle": "تجمع من 5 كيانات متكاملة للاستجابة لجميع متطلباتكم في الهندسة الصناعية",
   "list": [
     {
       "id": "mpeb",
@@ -111,7 +111,7 @@
   "stats": {
     "title": "مجموعة LLEDO",
     "list": [
-      { "value": "36 عاماً", "label": "من الخبرة" },
+      { "value": "منذ 1989", "label": "خبرة معترف بها" },
       { "value": "70", "label": "متعاون" },
       { "value": "قدرة", "label": "إنتاجية" },
       { "value": "5", "label": "كيانات متكاملة" }
