--- a/src/i18n/locales/ar/vision.json
+++ b/src/i18n/locales/ar/vision.json
@@ -8,10 +8,10 @@
     "intro": "منذ عام 1989، رؤيتي بسيطة: بناء مجموعة صناعية فرنسية متميزة، قادرة على تلبية أكثر احتياجات الطيران والدفاع تطلباً. اليوم، تجمع مجموعة LLEDO Industries 70 متعاوناً شغوفاً حول قيم مشتركة.",
     "quote": "قوتنا تكمن في تكامل خبراتنا والتزام كل متعاون. معاً، نتغلب على أكثر التحديات التقنية تعقيداً.",
     "stats": [
-      { "value": "36 عاماً", "label": "من الخبرة" },
+      { "value": "منذ 1989", "label": "من الخبرة" },
       { "value": "70", "label": "متعاون" },
       { "value": "5", "label": "كيانات" },
-      { "value": "~10 مليون €", "label": "إيرادات" }
+      { "value": "مجموعة", "label": "صناعية متكاملة" }
     ]
   },
   "values": {
