--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -9,15 +9,15 @@
       "description": "القلب التاريخي للمجموعة منذ 1989، MPEB متخصصة في التصنيع الدقيق 3 و4 و5 محاور، وتصنيع القطع الميكانيكية المعقدة وتجميع المجموعات الميكانيكية للطيران والدفاع.",
       "expertise": [
         "تصنيع دقيق على آلات CNC 3 و4 و5 محاور",
+        "الجلخ المسطح والأسطواني",
         "تصنيع قطع فردية وسلاسل صغيرة",
-        "تجميع مجموعات ميكانيكية معقدة",
-        "التحكم البعدي ثلاثي الأبعاد والقياس",
+        "الثقب الدقيق",
         "التآكل الكهربائي بالسلك وبالاختراق",
-        "النقش بالليزر"
+        "التجميع ومراقبة الجودة"
       ],
       "capabilities": {
-        "capacity": "قدرة مكيفة",
-        "precision": "تفاوت ±0.01mm",
+        "capacity": "تصنيع قطع فردية",
+        "precision": "الجلخ المسطح والأسطواني",
         "machines": "أسطول آلات CNC"
       },
       "certifications": ["ISO 9001:2015", "EN 9100:2018", "قابلية التبادل AIRBUS"],
