--- a/src/i18n/locales/es/expertises.json
+++ b/src/i18n/locales/es/expertises.json
@@ -9,15 +9,15 @@
       "description": "Corazón histórico del grupo desde 1989, MPEB está especializada en mecanizado de precisión de 3, 4 y 5 ejes, fabricación de piezas mecánicas complejas y ensamblaje de conjuntos mecánicos para aeronáutica y defensa.",
       "expertise": [
         "Mecanizado de precisión en máquinas CNC de 3, 4 y 5 ejes",
+        "Rectificado plano y cilíndrico",
         "Fabricación de piezas unitarias y pequeñas series",
-        "Ensamblaje de conjuntos mecánicos complejos",
-        "Control dimensional 3D y metrología",
+        "Mandrinado de precisión",
         "Electroerosión por hilo y por penetración",
-        "Grabado láser"
+        "Ensamblaje y control de calidad"
       ],
       "capabilities": {
-        "capacity": "Capacidad adaptada",
-        "precision": "Tolerancia ±0.01mm",
+        "capacity": "Fabricación de piezas unitarias",
+        "precision": "Rectificado plano y cilíndrico",
         "machines": "Parque de máquinas CNC"
       },
       "certifications": ["ISO 9001:2015", "EN 9100:2018", "Intercambiabilidad AIRBUS"],
